# aid-cc-ptspsd

./: .dockerignore  .env.example  .gitignore  .mcp.json  .worktreeinclude  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
.claude/: settings.json  settings.local.json.example
.claude/agents/: code-reviewer.md
.claude/rules/: database.md  docker.md  python.md  typescript.md
.claude/skills/db-migrate/: SKILL.md
.claude/skills/db-reset/: SKILL.md
.claude/skills/new-migration/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py
apps/api/src/app/: config.py  db.py  main.py  models.py  schemas.py
apps/api/src/app/routes/: health.py  items.py
apps/api/tests/: conftest.py  test_health.py  test_items.py
apps/web/: .dockerignore  .env.example  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  api.ts  index.css
docs/: ecosystem.md
