[project]
name = "app"
version = "0.1.0"
description = "FastAPI backend for the polyglot template"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.51.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "psycopg[binary]>=3.3.4",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.15.21",
    "mypy>=2.3.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["E501"]
"tests/*" = ["B"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true
exclude = ["migrations/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
